--- a/rest/weather-report/.project
+++ b/rest/weather-report/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>weather</name>
+	<name>weather-report</name>
 	<comment></comment>
 	<projects>
 	</projects>
