feat(mudule-container): add all phase 1 api

--- a/container/weather-boot/src/main/resources/application.properties
+++ b/container/weather-boot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.port=9000
-server.port=25000
+server.port=26000
+#server.port=25000
 server.context-path=/api
 
 endpoints.cors.allowed-origins=http://mocker.egen.io
@@ -11,5 +11,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
