--- a/container/weather-boot/pom.xml
+++ b/container/weather-boot/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
   </properties>
 
   <dependencies>
