--- a/container/weather-boot/src/main/resources/application.properties
+++ b/container/weather-boot/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
